[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain",
    "langchain-groq",
    "faiss-cpu",
    "sentence-transformers",
    "streamlit",
    "python-dotenv",
    "langchain_community",
    "fastapi",
    "uvicorn",
    "httpx"
]
